# document_grounding

./: .gitignore  DocuXray_final.ipynb  README.md  draw_boxes.py  generate_document_graph.py  generate_ocr_json.py  pyproject.toml
examples/: ocr_words.json  requested_fields.json  row_aware_fields.json  sample_fields.json  sample_ocr_words.json  sample_table_structure.json  table_structure.json  train_manifest.jsonl
src/: draw_boxes.py
src/docuxray/: __init__.py  annotation_preprocessor.py  candidates.py  cli.py  dataset.py  geometry.py  graph.py  grounding.py  io.py  matching.py  normalization.py  ocr.py  pipeline.py  predict.py  prepare.py  reranking.py  tables.py  train.py  types.py
tests/: test_annotation_preprocessor.py  test_dataset.py  test_geometry.py  test_grounding.py  test_matching.py  test_normalization.py  test_ocr.py
